<resources>
    <string name="app_name">VisitLog</string>

    <string name="Groups">Группы</string>
    <string name="People">Люди</string>
    <string name="SearchString">Пасхалка</string>
    <string name="NameTextLayout">Имя</string>
    <string name="Add">Добавить</string>
    <string name="Cancel">Отмена</string>
    <string name="SelectAll">Выделить всех</string>

    <string name="Search">Поиск</string>
    <string name="Edit">Изменить</string>
    <string name="RepeatAlert">Такое наименование уже есть. Создать новый контакт под названием </string>
    <string name="RenameAlert">Такое наименование уже есть. Переименовать контакт под названием </string>

    <string name="Members">Участники</string>
    <string name="AddData"> был добавлен на </string>
    <string name="AllGroups">Все группы</string>
    <string name="AllPeople">Все люди</string>
    <string name="in">in</string>
    <string name="AlertEmptyGroupName">Не удалось добавить пустое наименование</string>
    <string name="RenameAlertEmptyName">Не удалось переименовать в пустое наименование</string>

    <string name="hasRemoved">был удалён</string>
    <string name="willHasAdd">будет добавлен</string>
    <string name="addGroupDate1">все участники</string>
    <string name="addGroupDate2">были добавлены на</string>
    <string name="PeopleAlreadyHaveThisDate">уже записан(а) на выбранную дату.</string>

    <string name="Remove">Удалить</string>
    <string name="Rename">Переименовать</string>
    <string name="SaveData">Сохранить базу</string>
    <string name="OpenData">Открыть базу</string>

    <string name="None">None</string>


    <!-- Содержимое текстовых полей и подписей кнопок (Layout: act_dir_picker) -->
    <string name="actLabel_filePicker">Выбор файла</string>
    <string name="actLabel_dirPicker">Выбор каталога</string>
    <string name="dirPicker_dirUnreadable">Нет доступа в текущий каталог</string>
    <string name="dirPicker_fsRootUnreadable">Не удалось открыть корневой каталог, открываю sdcard</string>
    <string name="tvText_dirPicker_empty">Пусто</string>
    <string name="btnText_dirPicker_go">Выбрать</string>
    <string name="dirPicker_levelUp">На уровень выше</string>
    <string name="EmptyPeopleNameAlert">Не удалось добавить пустое наименование</string>
    <string name="DataSaveAlert">База данных была сохранена!</string>
    <string name="DataOpenAlert">База данных загружена!</string>
    <string name="came_days">ДНИ ПОСЕЩЕНИЯ</string>
    <string name="hours_avg">ВРЕМЯ МЕСЯЦ/ДЕНЬ</string>
    <string name="add_people">Добавить человека</string>
    <string name="calendar">Календарь</string>
    <string name="hours">Время</string>
    <string name="day">День</string>
    <string name="peopleActivityTitle">Добавление</string>


    <string name="informationDay">д.</string>
    <string name="informationHours">ч.</string>



</resources>
