<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/Search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/editMod"
        android:enabled="true"
        android:icon="@drawable/ic_mode_edit_black_24dp"
        android:title="@string/Edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/itemCheckBox"
        android:enabled="true"
        android:icon="@drawable/ic_check_box_outline_blank_black_24dp"
        android:title="@string/SelectAll"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_check_box_outline_blank_black_24dp" />


    <group android:id="@+id/item_group1"
        >

        <item
        android:id="@+id/save_data"
        android:title="@string/SaveData"
        app:showAsAction="never"
        />

        <item
            android:id="@+id/renameItem"
            android:title="@string/Rename"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/removeItem"
            android:title="@string/Remove"
            app:showAsAction="never"
            />


        <item
            android:id="@+id/open_data"
            android:title="@string/OpenData"
            app:showAsAction="never"
            />

    </group>


</menu>